# bfgen

./: beam_trace_visual.py  generate_target_output.py  pyproject.toml  search.py  tiny_bf.py
data_filters/: filter_k.py  filter_unique_outputs.py  filter_unique_programs.py  find_dupes.py
